[project]
name = "accumulation_tree"
version = "0.6.4"
description = "Red/black tree with support for fast accumulation of values in a key range"
authors = [
  {name = "Timo Kluck", email = "tkluck@infty.nl"},
]
license = {text = "MIT License"}
keywords = ["BST", "data structure", "accumulation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/tkluck/accumulation_tree"

[build-system]
requires = ["setuptools>=42", "cffi>=1.0.0", "cython"]
build-backend = "setuptools.build_meta"
